# tapl

./: .gitignore  LICENSE  shell.nix  stack.yaml  tapl.cabal
src/: Constraints.hs  Eval.hs  Lexer.x  Main.hs  Parser.y  Syntax.hs  Token.hs  TypeCheck.hs  Unification.hs
