name:                tapl
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sgraf812/tapl#readme
license:             BSD3
license-file:        LICENSE
author:              Sebastian Graf
maintainer:          sgraf1337@gmail.com
copyright:           2018 Sebastian Graf
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable tapl
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-tools:         alex
                     , happy
  other-modules:       Eval
                     , Lexer
                     , Parser
                     , Syntax
                     , Token
                     , Constraints
                     , Unification
  build-depends:       base >= 4.7 && < 5
                     , array
                     , bound
                     , containers
                     , deriving-compat
                     , exceptions
                     , repline
                     , transformers
